--- a/src/style.css
+++ b/src/style.css
@@ -49,3 +49,14 @@ button{
 
     font-size: 1.5rem;
 }
+
+option {
+
+    font-size: 1rem;
+}
+
+select {
+
+    font-size: 1rem;
+    height: 2rem;
+}
