--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,19 @@
 #content {
 
+    
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    width: 100%;
+    
+    
     
 }
 
 .imageDiv img{
 
-    max-height: 40rem;
-    object-fit: cover;
+   
+    object-fit:cover;
+    display: flex;
+    width: 100%;
     
 }
 
@@ -18,28 +21,39 @@
 
     display: flex;
     flex-direction: column;
-    max-width: 25rem;
+    
+    
+}
 
+input {
 
+    border:1px solid black;
 }
 
 .browserForm {
 
-    padding:2rem;
+    padding:1rem;
     border: 4px solid rgb(39, 104, 195);
     border-radius:10px;
+    display: flex;
+    
 }
 
 .browserForm div {
 
-    padding-bottom:1rem;
+    padding-bottom:1.5rem;
+    
+
 }
 
 fieldset{
 
-    padding:4rem;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
     font-size: 2rem;
 }
+
 input{
 
     font-size: 1.5rem;
@@ -59,4 +73,9 @@ select {
 
     font-size: 1rem;
     height: 2rem;
+    max-width: fit-content;
+    border: 1px solid black;
+
 }
+
+
