Add media query to center and justify center align items if screen is larger than 800px.

--- a/src/style.css
+++ b/src/style.css
@@ -78,4 +78,14 @@ select {
 
 }
 
+@media only screen and (min-width: 800px ){
+#content {
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+   
+  }
