--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,9 @@
    
     object-fit:cover;
     display: flex;
-    width: 100%;
+    max-width: 100%;
+    width:40rem;
+    height: 40rem;
     
 }
 
@@ -21,6 +23,7 @@
 
     display: flex;
     flex-direction: column;
+    width: 40rem;
     
     
 }
@@ -36,6 +39,7 @@ input {
     border: 4px solid rgb(39, 104, 195);
     border-radius:10px;
     display: flex;
+    
     
 }
 
@@ -57,6 +61,7 @@ fieldset{
 input{
 
     font-size: 1.5rem;
+   
 }
 
 button{
